Added thermal ordering
